# cockpit-ng

./: .env.example  .gitignore  .pre-commit-config.yaml  ADD_DEVICE_IMPLEMENTATION.md  AGENTS.md  AIRGAP_DEPLOYMENT.md  APSCHEDULER_REMOVAL.md  BACKEND_DATABASE_STRUCTURE.md  BACKUP_PATH_TEMPLATES.md  BACKUP_REFACTORING_SUMMARY.md  BACKUP_WORKFLOW.md  BUGFIX-execute-and-sync.md  BUG_ANALYSIS_SESSION_TIMEOUT.md  BUG_FIX_GROUP_FLATTENING.md  BULK_EDIT_CREATE_INTERFACE_OPTION.md  BULK_EDIT_JSON_IMPLEMENTATION.md  CACHE_ENHANCEMENTS.md  CLAUDE.md  CLAUDE.old  CLAUDE_TODO.md  COCKPIT_AGENT_RENAME_SUMMARY.md  COMPLIANCE_IMPLEMENTATION_COMPLETE.md  COMPONENT_MIGRATION_PLAN.md  CONFIG_AUDIT_REPORT.md  CONSOLIDATION_SUMMARY.md  CSV_UPLOAD_BULK_EDIT.md  CUSTOM_FIELDS_UPDATE.md  CUSTOM_FIELD_TYPE_FIX.md  DEVICE_LIFECYCLE_TESTING_FIXES.md  Dockerfile  ENDPOINT_USAGE.md  FEATURE_HELP_MODAL.md  GIT_CREDENTIAL_FIX.md  GRAPHQL_FIXES.md  IMPLEMENTATION_COMPLETE.md  IMPORT_ANALYSIS.md  INSTALL.md  INTERFACE_TYPE_NORMALIZATION.md  INVENTORY_CONSOLIDATION_PLAN.md  INVENTORY_DATABASE_MIGRATION.md  (+34 more)
.endpoint_scan/: endpoints_extract.txt
backend/: .dockerignore  .env.example  .env.test.example  .env.test~  CACHE_API.md  CELERY_QUEUES.md  CELERY_STARTUP.md  (+82 more)
mcp/: .env.example  Dockerfile  README.md  __init__.py  app.py  auth.py  config.py  debug_start.py  pyproject.toml  requirements.txt  server.py  start.py  test_server.py
mcp/docs/: instructions.md
mcp/models/: mcp.py
mcp/routes/: health.py  mcp.py
mcp/services/: client.py  dispatcher.py
mcp/tests/: test_mcp.py  test_mcp_sdk.py
(+2899 files in other folders)
